# 273InventoryProject

./: CMakeLists.txt  Inventory.txt  README.md
projectz/: projectz.sln
projectz/projectz/: addItem.cpp  alertMessage.cpp  class.h  filterView.cpp  projectz.cpp  projectz.vcxproj  projectz.vcxproj.filters  removeItem.cpp  viewItem.cpp
projectz/projectz/x64/Debug/: additem.obj.enc  projectz.exe.recipe  projectz.ilk  projectz.obj.enc  vc143.idb
projectz/projectz/x64/Debug/projectz.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.read.2.tlog  link.write.1.tlog  projectz.lastbuildstate
